--- a/contact.html
+++ b/contact.html
@@ -16,23 +16,23 @@
 <body>
     <div class="header">
         <div class="links">
-          <div class="left-links">
-            <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
-          </div>
-          <div class="right-links">
-            <a href="contact.html" class="contact-header">Contact us</a>
-            <a href="login.html" class="log-in">Login</a>
-      
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
-              </span>
-            </label>
-          </div>
-        </div>    
-      </div>
+            <div class="left-links">
+                <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+            </div>
+            <div class="right-links">
+                <a href="contact.html" class="contact-header">Contact us</a>
+                <a href="login.html" class="log-in">Login</a>
+
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider">
+                        <span class="icon sun">☀️</span>
+                        <span class="icon moon">🌙</span>
+                    </span>
+                </label>
+            </div>
+        </div>
+    </div>
     <!-- HEALU CONTACT TITLE -->
     <div class="contact-container">
         <h1>
@@ -96,7 +96,7 @@
         <div class="call-us">
             <img src="images/24-hours_4838377.png">
             <h2>
-                Contact us 
+                Contact us
             </h2>
             <p>
                 Call us to speak to a member of our team. We are always happy to help.
@@ -112,11 +112,21 @@
             <p>
                 Visit us at one of our medical centers.
             </p>
+            <br>
             <a href="https://maps.app.goo.gl/8cfpipUveDTxZBP7A">Our location</a>
 
         </div>
 
     </div>
-
 </body>
+ <!--Footer -->
+ <footer class="footer">
+    <div class="social-icons">
+       <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+       <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+       <a href="https://wa.me/1234567890" target="_blank"><i class="fab fa-whatsapp"></i></a>
+       <p>© 2025 HealU Clinic | All Rights Reserved</p>
+    </div>
+
+</footer>
 </html>
