--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -199,12 +199,14 @@
                                     <input required type="date" id="book-date">
                                 </div>
                                 <button type="submit" class="book-confirm-btn">Book Now</button>
+                                <button class="cancel-btn">Cancel</button>
                             </form>
                         </div>
                     </section>
                     <section>
                         <div class="book-msg">
                             <h3>Reservation Completed!</h3>
+                            <button>Close</button>
                         </div>
                     </section>
                 </div>
