--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
             </div>
             <div class="num">
                 <label for="num-id">Phone number</label>
-                <input id="num-id" required type="number" placeholder="Enter your contact number">
+                <input id="num-id" required type="number" placeholder="Enter your phone number">
             </div>
             <div class="message">
                 <label for="message-id">Message</label>
