fixed the header navigation

--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
     <link href="css/all.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="css/header.css">
   </head>
 <body>
   <!-- Header Section -->
