--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -14,7 +14,7 @@
   <div class="header">
     <div class="links">
       <div class="left-links">
-        <a href="bodyFooter.html" class="logo"><img src="images/clinic2.png"></a>
+        <a href="bodyFooter.html" class="logo"><img src="images/clinic1.png"></a>
       </div>
       <div class="right-links">
         <a href="contact.html" class="contact-header">Contact us</a>
@@ -114,7 +114,8 @@
   <section>
     <div id="testimonials-section" class="testimonials">
        <div class="testimonial-header">
-         <img src="images/comment2.png" alt="comment icon">
+         <!-- <img src="images/comment2.png" alt="comment icon"> -->
+         <i class="fa-solid fa-comment"></i>
          <h3>Patient Testimonials</h3>
        </div>
        <!-- <p>Excellent experience! The doctor was very professional, and staff was friendly and helpful.</p>
