--- a/dental-section.html
+++ b/dental-section.html
@@ -58,64 +58,71 @@
     <h1 class="main-title">Welcome to Dental Section🦷</h1>
 
     <p class="subtitle">
-      Where professionalism meets exceptional dental care for a healthy,
-      confident smile
+      Where professionalism meets exceptional dental care for a healthy smile
     </p>
 
     <!-- Cards Section -->
     <div class="container">
       <div class="card">
-        <div class="box">
-          <div class="doc-pic">
-            <img src="images/dent 1.png" alt="doctor1" />
-            <a href="#"> Dr.Mohamed Ali</a>
-          </div>
+        <div class="image-wrapper">
+          <img src="images/dent 11.jpg" alt="doctor1" class="doctor-image" />
+        </div>
+        <div class="doctor-info">
+          <a href="#"> Dr.Mohamed Ali</a>
+          <p class="description">Enhances smiles with aesthetic treatments.</p>
           <div class="rating">
             <!--stars-->
-            <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
             <i class="far fa-star"></i>
-          </div>
-        </div>
-        <p class="description">Dentist with 7+ years of experience.</p>
-      </div>
-      <div class="card">
-        <div class="box">
-          <div class="doc-pic">
-            <img src="images/dent 2.png" alt="doctor1" />
-            <a href="#">Dr.Salma Mohamed</a>
-          </div>
-          <div class="rating">
-            <!--stars-->
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
             <i class="far fa-star"></i>
           </div>
+          <p class="slogan">Surgical precision, compassionate care.</p>
         </div>
-        <p class="description">Dentist with 4+ years of experience.</p>
       </div>
-      <div class="card">
-        <div class="box">
-          <div class="doc-pic">
-            <img src="images/dent 3.png" alt="doctor1" />
-            <a href="#">Dr.Youssef Nagah</a>
+
+      <div class="container">
+        <div class="card">
+          <div class="image-wrapper">
+            <img src="images/dent 22.jpg" alt="doctor1" class="doctor-image" />
           </div>
-          <div class="rating">
-            <!--stars-->
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
+          <div class="doctor-info">
+            <a href="#"> Dr.Salma Mohamed</a>
+            <p class="description">Straightens teeth and corrects bites.</p>
+            <div class="rating">
+              <!--stars-->
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p class="slogan">Straight teeth, straight confidence.</p>
           </div>
         </div>
-        <p class="description">Dentist with 10+ years of experience.</p>
-      </div>
-    </div>
+  
+        <div class="container">
+          <div class="card">
+            <div class="image-wrapper">
+              <img src="images/dent 33.jpg" alt="doctor1" class="doctor-image" />
+            </div>
+            <div class="doctor-info">
+              <a href="#"> Dr.Youssef Nagah</a>
+              <p class="description"> Performs surgical dental procedures.</p>
+              <div class="rating">
+                <!--stars-->
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <p class="slogan">Dentist with 7+ years of experience.</p>
+            </div>
+          </div>
+          </div>
+    
     <!-- Chat Bot Toggle Button -->
     <button class="chatbot-btn" onclick="toggleChatbox()">
       <i class="fa-solid fa-robot"></i>
