--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -42,7 +42,7 @@
                     <!-- The Profile Header -->
                     <header class="doctor-profile-header">
                         <div class="doc-icon">
-                            <i class="fa-solid fa-user-doctor"></i>
+                            <img src="images/dent 11.jpg" alt="">
                         </div>
                         <div class="doc-text">
                             <div class="title">
