linked doc1 and doc2 pages to the website

--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -54,7 +54,7 @@
     <div id="serv" class="section">
       <h2>Services</h2>
       <div  class="services">
-          <a href="dentistry.html">
+          <a href="dental-section.html">
               <div class="card">
                   <!-- <img src="images/teeth1.jpeg" height="50px" alt="Dentistry"> -->
                   <i class="fas fa-tooth" style="font-size: 50px;"></i>
