--- a/dental-section.html
+++ b/dental-section.html
@@ -68,7 +68,7 @@
           <img src="images/dent 11.jpg" alt="doctor1" class="doctor-image" />
         </div>
         <div class="doctor-info">
-          <a href="#"> Dr.Mohamed Ali</a>
+          <a href="dentist-doc1.html"> Dr.Mohamed Ali</a>
           <p class="description">Enhances smiles with aesthetic treatments.</p>
           <div class="rating">
             <!--stars-->
@@ -88,7 +88,7 @@
             <img src="images/dent 22.jpg" alt="doctor1" class="doctor-image" />
           </div>
           <div class="doctor-info">
-            <a href="#"> Dr.Salma Mohamed</a>
+            <a href="dentist-doc2.html"> Dr.Salma Mohamed</a>
             <p class="description">Straightens teeth and corrects bites.</p>
             <div class="rating">
               <!--stars-->
