--- a/dentist-doc2.html
+++ b/dentist-doc2.html
@@ -66,7 +66,7 @@
                             <h2>About <span class="doc-name">Dr, Salma</span></h2>
                         </div>
                         <div class="doc-bio">
-                            <p>Dr. Salma Mohamed is a dedicated dentist with a passion for transforming smiles and enhancing oral health. She holds a Bachelor's Degree in Oral and Dental Medicine from the Egyptian Russian University, obtained in 2019. Currently, she serves as a dentist at the Ministry of Health & Population in Cairo, where she specializes in cosmetic dentistry, pediatric dentistry, and general dental care.
+                            <p>Dr. Salma Mohamed is a dedicated 38 year old dentist with a passion for transforming smiles and enhancing oral health. She holds a Bachelor's Degree in Oral and Dental Medicine from the Egyptian Russian University, obtained in 2019. Currently, she serves as a dentist at the Ministry of Health & Population in Cairo, where she specializes in cosmetic dentistry, pediatric dentistry, and general dental care.
                                 In addition to her clinical practice, Dr. Mohamed is committed to continuous learning and professional development. She has participated in various dental workshops and training programs, focusing on the latest advancements in restorative techniques and patient care.
                                 
                                 Dr. Mohamed's approach to dentistry is patient-centered, emphasizing comfort, trust, and personalized treatment plans. Her dedication to improving her patients' oral health and confidence makes her a respected professional in the dental community.</p>
