changed the reviews into more realistic ones in my opinion

--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -139,10 +139,10 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Sara A.</h2>
-                                        <p>"Absolutely amazing experience. Super kind and professional!"</p>
+                                        <p>"Treatment options were not thoroughly explained."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/3-stars.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -161,10 +161,10 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Mostafa K.</h2>
-                                        <p>"Very clear and helpful!"</p>
+                                        <p>"Billing process was confusing and lacked detailed explanation."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
+                                        <img src="images/1-star.png" alt="">
                                     </div>
                                 </div>
                             </div>
