add an icon (again)

--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealU Clinic</title>
-    <link rel="icon" href="images/healU2.png" type="image/x-icon">
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
     <link href="css/all.min.css" rel="stylesheet">
