--- a/dentist-doc2.html
+++ b/dentist-doc2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/healU2.png" type="image/x-icon">
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <title>HealU Clinic</title>
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
