added icon to the head + few pics

--- a/Registration.html
+++ b/Registration.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/Registration.css">
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
