--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Contact us</title>
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
