--- a/dental-section.html
+++ b/dental-section.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/category.css" />
     <link rel="stylesheet" href="css/search-bar.css" />
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
