--- a/pediatrics-section.html
+++ b/pediatrics-section.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.1" />
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <title>PEDIATRICS</title>
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/category.css" />
