minor changes + dentist no. 3

--- a/dental-section.html
+++ b/dental-section.html
@@ -109,7 +109,7 @@
               <img src="images/dent 33.jpg" alt="doctor1" class="doctor-image" />
             </div>
             <div class="doctor-info">
-              <a href="#"> Dr.Youssef Nagah</a>
+              <a href="dentist-doc3.html"> Dr.Youssef Nagah</a>
               <p class="description"> Performs surgical dental procedures.</p>
               <div class="rating">
                 <!--stars-->
