--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealU Clinic</title>
-    <link rel="icon" href="imgs/clinic1.png" type="image/png">
+    <link rel="icon" href="images/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
     <link href="css/all.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="css/header.css">
