--- a/dentist-doc3.html
+++ b/dentist-doc3.html
@@ -64,7 +64,7 @@
                     <!-- About section -->
                     <section class="about-doctor">
                         <div class="about">
-                            <h2>About <span class="doc-name">Dr, Salma</span></h2>
+                            <h2>About <span class="doc-name">Dr, Youssef</span></h2>
                         </div>
                         <div class="doc-bio">
                             <p>Dr. Youssef Nagah is a trusted dental surgeon with 7 years of focused experience in surgical dentistry. He holds a Bachelor's Degree in Oral and Dental Medicine and has completed advanced training in oral surgery, including dental implant placement, surgical extractions, and minor maxillofacial procedures.
@@ -96,7 +96,7 @@
                                 <div class="doc-card-info">
                                     <h3>Working Hours</h3>
                                     <p>Saturday - Wednesday - Friday</p>
-                                    <p>From 12:00 PM To 7:00 PM</p>
+                                    <p>From 11:00 PM To 7:00 PM</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -123,30 +123,8 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Youssef A.</h2>
-                                        <p>"Appointments often run late, causing inconvenience."</p>
-                                    </div>
-                                    <div class="stars">
-                                        <img src="images/3-stars.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="comment-box">
-                                <div class="comment-section">
-                                    <div class="comment">
-                                        <h2>Mazen W.</h2>
-                                        <p>"Utilizing the latest dental technologies, Dr. Mohamed ensures efficient and effective treatments."</p>
-                                    </div>
-                                    <div class="stars">
-                                        <img src="images/5-stars.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="comment-box">
-                                <div class="comment-section">
-                                    <div class="comment">
-                                        <h2>William G.</h2>
-                                        <p>"She was a bit late, but her clinic is equipped with state-of-the-art technology, ensuring precise diagnostics and effective treatments!"</p>
+                                        <h2>Jailan F.</h2>
+                                        <p>"Dr. Nagah is good at what he does, but I felt the wait times at the clinic were a bit long. My appointment was delayed twice, which made the experience frustrating. I know he's busy, but a bit more efficiency would have been appreciated. That said, the surgery itself was flawless, and I’m happy with the outcome."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -156,8 +134,8 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Asmaa O.</h2>
-                                        <p>"She takes the time to explain procedures and options, empowering me to make informed decisions about my dental health."</p>
+                                        <h2>Nadeen H.</h2>
+                                        <p>"I had a wonderful experience with Dr. Nagah! He performed my dental implant procedure, and everything went smoothly. His staff was friendly, and the clinic had a calming atmosphere. Dr. Nagah took the time to answer all my questions, which really helped me feel at ease."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/5-stars.png" alt="">
@@ -167,15 +145,48 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Ziad M.</h2>
-                                        <p>"The clinic's atmosphere felt sterile and unwelcoming."</p>
+                                        <h2>Youmna S.</h2>
+                                        <p>"Dr. Nagah’s surgical skills are top-notch! I had a minor maxillofacial procedure done, and the recovery was fast. He is very knowledgeable and updated on the latest techniques, which gave me confidence in the treatment. I felt completely safe in his care."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/1-star.png" alt="">
+                                        <img src="images/4-stars.png" alt="">
                                     </div>
                                 </div>
                             </div>
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Cristiano R.</h2>
+                                        <p>"Dr. Youssef Nagah is an exceptional dentist! After years of avoiding surgery, I finally decided to get an implant. His calm demeanor and thorough explanations made the whole process much less intimidating. The surgery went smoothly, and the recovery was quicker than I expected. Highly recommend him to anyone needing a skilled and compassionate surgeon!"</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/5-stars.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Menna A.</h2>
+                                        <p>"Dr. Nagah is hands-down the best dental surgeon I've ever seen. I had a difficult extraction, and he handled it with such skill and care. I felt completely supported throughout the entire process. I’m also amazed at how well the recovery went. Highly recommend him!"</p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/4-stars.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="comment-box">
+                            <div class="comment-section">
+                                <div class="comment">
+                                    <h2>Nick H.</h2>
+                                    <p>"The procedure itself was fine, but I was hoping for more detailed post-op instructions. I had to call the clinic a few times for clarification. It would have been helpful if that information was more clearly explained right after the surgery. Still, Dr. Nagah was very professional during the procedure."</p>
+                                </div>
+                                <div class="stars">
+                                    <img src="images/3-stars.png" alt="">
+                                </div>
+                            </div>
                         </div>
+                    </div>
                     </section>
                     <!-- popup reservation form -->
                     <section>
