linked pediatrics webpage

--- a/bodyFooter.html
+++ b/bodyFooter.html
@@ -70,7 +70,7 @@
                   <p>Personalized skin treatments for all conditions using modern dermatological techniques.</p>
               </div>
           </a>
-          <a href="pediatrics.html">
+          <a href="pediatrics-section.html">
               <div class="card">
                   <!-- <img src="imgs/teeth1.jpeg" height="50px" alt="Pediatrics"> -->
                   <i class="fas fa-baby-carriage" style="font-size: 50px;"></i>
