minor changes in the reviews because it was too long

--- a/dentist-doc3.html
+++ b/dentist-doc3.html
@@ -124,7 +124,7 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Jailan F.</h2>
-                                        <p>"Dr. Nagah is good at what he does, but I felt the wait times at the clinic were a bit long. My appointment was delayed twice, which made the experience frustrating. I know he's busy, but a bit more efficiency would have been appreciated. That said, the surgery itself was flawless, and I’m happy with the outcome."</p>
+                                        <p>"Dr. Nagah is good at what he does, but I felt the wait times at the clinic were a bit long. My appointment was delayed twice, which made the experience frustrating. I know he's busy. That said, the surgery itself was flawless, and I’m happy with the outcome."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -135,7 +135,7 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Nadeen H.</h2>
-                                        <p>"I had a wonderful experience with Dr. Nagah! He performed my dental implant procedure, and everything went smoothly. His staff was friendly, and the clinic had a calming atmosphere. Dr. Nagah took the time to answer all my questions, which really helped me feel at ease."</p>
+                                        <p>"I had a wonderful experience with Dr. Nagah! He performed my dental implant procedure. His staff was friendly, and the clinic had a calming atmosphere. Dr. Nagah took the time to answer all my questions too!"</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/5-stars.png" alt="">
@@ -146,7 +146,7 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Youmna S.</h2>
-                                        <p>"Dr. Nagah’s surgical skills are top-notch! I had a minor maxillofacial procedure done, and the recovery was fast. He is very knowledgeable and updated on the latest techniques, which gave me confidence in the treatment. I felt completely safe in his care."</p>
+                                        <p>"Dr. Nagah’s surgical skills are top-notch! I had a minor maxillofacial procedure done, and the recovery was fast."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -157,7 +157,7 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Cristiano R.</h2>
-                                        <p>"Dr. Youssef Nagah is an exceptional dentist! After years of avoiding surgery, I finally decided to get an implant. His calm demeanor and thorough explanations made the whole process much less intimidating. The surgery went smoothly, and the recovery was quicker than I expected. Highly recommend him to anyone needing a skilled and compassionate surgeon!"</p>
+                                        <p>"Dr. Youssef Nagah is an exceptional dentist! After years of avoiding surgery, I finally decided to get an implant. His calm demeanor and thorough explanations made the whole process much less intimidating. The surgery went smoothly, and the recovery was quicker than I expected."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/5-stars.png" alt="">
@@ -168,7 +168,7 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Menna A.</h2>
-                                        <p>"Dr. Nagah is hands-down the best dental surgeon I've ever seen. I had a difficult extraction, and he handled it with such skill and care. I felt completely supported throughout the entire process. I’m also amazed at how well the recovery went. Highly recommend him!"</p>
+                                        <p>"Dr. Nagah is hands-down the best dental surgeon I've ever seen. I felt completely supported throughout the entire process. I’m also amazed at how well the recovery went. Highly recommend him!"</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -179,7 +179,7 @@
                             <div class="comment-section">
                                 <div class="comment">
                                     <h2>Nick H.</h2>
-                                    <p>"The procedure itself was fine, but I was hoping for more detailed post-op instructions. I had to call the clinic a few times for clarification. It would have been helpful if that information was more clearly explained right after the surgery. Still, Dr. Nagah was very professional during the procedure."</p>
+                                    <p>"The procedure itself was fine, but I was hoping for more detailed post-op instructions. Still, Dr. Nagah was very professional during the procedure."</p>
                                 </div>
                                 <div class="stars">
                                     <img src="images/3-stars.png" alt="">
