--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HealU Clinic</title>
+    <title>Dr, Mohamed Ali</title>
     <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
