--- a/dentist-doc2.html
+++ b/dentist-doc2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
-    <title>HealU Clinic</title>
+    <title>Dr, Salma Mohamed</title>
     <link rel="icon" href="imgs/clinic1.png" type="image/png">
     <link href="css/bodyFooter.css" rel="stylesheet" type="text/css">
     <link href="css/all.min.css" rel="stylesheet">
