--- a/dentist-doc1.html
+++ b/dentist-doc1.html
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3 class="clinic-name">HealU Clinic</h3>
-                                    <a class="book-btn" href="#">Book Now</a>
+                                    <a id="book-link" class="book-btn" href="#">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Ahmed M.</h2>
+                                        <h2>Youssef A.</h2>
                                         <p>"The best doctor ever. Thank You!"</p>
                                     </div>
                                     <div class="stars">
@@ -150,7 +150,7 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Youssef S.</h2>
+                                        <h2>Youssef N.</h2>
                                         <p>"Good experience overall!"</p>
                                     </div>
                                     <div class="stars">
@@ -161,11 +161,11 @@
                             <div class="comment-box">
                                 <div class="comment-section">
                                     <div class="comment">
-                                        <h2>Mostafa K.</h2>
-                                        <p>"Billing process was confusing and lacked detailed explanation."</p>
+                                        <h2>Menna F.</h2>
+                                        <p>"Excellent care and clear explanations throughout."</p>
                                     </div>
                                     <div class="stars">
-                                        <img src="images/1-star.png" alt="">
+                                        <img src="images/5-stars.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -184,8 +184,8 @@
                     </section>
                     <!-- popup reservation form -->
                     <section>
-                        <div class="form-bg">
-                            <form action="" class="book-form">
+                        <div id="reservation-form" class="form-bg">
+                            <form id="book-form" action="" class="book-form">
                                 <div>
                                     <label for="patient-name" class="label">Patient Name: </label>
                                     <input type="text" required id="patient-name"
@@ -199,15 +199,15 @@
                                     <label for="book-date" class="date-label">Reservation Date</label>
                                     <input required type="date" id="book-date">
                                 </div>
-                                <button type="submit" class="book-confirm-btn">Book Now</button>
-                                <button class="cancel-btn">Cancel</button>
+                                <button id="confirm-book-btn" type="submit" class="book-confirm-btn">Book Now</button>
+                                <button id="cancel-btn" class="cancel-btn">Cancel</button>
                             </form>
                         </div>
                     </section>
                     <section>
-                        <div class="book-msg">
+                        <div id="confirmation-msg" class="book-msg">
                             <h3>Reservation Completed!</h3>
-                            <button>Close</button>
+                            <button id="close-msg-btn">Close</button>
                         </div>
                     </section>
                 </div>
