--- a/dentist-doc3.html
+++ b/dentist-doc3.html
@@ -67,11 +67,12 @@
                             <h2>About <span class="doc-name">Dr, Youssef</span></h2>
                         </div>
                         <div class="doc-bio">
-                            <p>Dr. Youssef Nagah is a trusted dental surgeon with 7 years of focused experience in surgical dentistry. He holds a Bachelor's Degree in Oral and Dental Medicine and has completed advanced training in oral surgery, including dental implant placement, surgical extractions, and minor maxillofacial procedures.
-
-                                Dr. Nagah is known for his meticulous technique, steady hand, and commitment to patient safety. He takes the time to ensure every patient fully understands their treatment plan and feels at ease before, during, and after surgery.
-                                
-                                Currently practicing at our clinic, Dr. Nagah brings both precision and compassion to every procedure. His dedication to ongoing education and the latest surgical advancements allows him to provide the highest standard of care in a calm, professional environment.</p>
+                            <p>Dr. Youssef Nagah is a dedicated dentist known for his expertise in restorative and
+                                aesthetic dentistry. With years of clinical experience and a passion for precision, he
+                                delivers high-quality care focused on both function and appearance. Dr. Nagah
+                                continually advances his skills through specialized training and is committed to helping
+                                patients achieve healthy, confident smiles. His calm, detail-oriented approach makes him
+                                a trusted name among patients and peers alike.</p>
                         </div>
                     </section>
 
@@ -86,7 +87,9 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3>Our Services</h3>
-                                    <p>Surgical Tooth Extractions, Dental Implants, Minor Oral Surgery, Bone Grafting & Ridge Preservation, Pre-Prosthetic Surgery and Management of Oral Surgical Emergencies</p>
+                                    <p>Surgical Tooth Extractions, Dental Implants, Minor Oral Surgery, Bone Grafting &
+                                        Ridge Preservation, Pre-Prosthetic Surgery and Management of Oral Surgical
+                                        Emergencies</p>
                                 </div>
                             </div>
                             <div class="doc-card">
@@ -105,7 +108,7 @@
                                 </div>
                                 <div class="doc-card-info">
                                     <h3 class="clinic-name">HealU Clinic</h3>
-                                    <a class="book-btn" href="#">Book Now</a>
+                                    <a id="book-link" class="book-btn" href="#">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +127,8 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Jailan F.</h2>
-                                        <p>"Dr. Nagah is good at what he does, but I felt the wait times at the clinic were a bit long. My appointment was delayed twice, which made the experience frustrating. I know he's busy. That said, the surgery itself was flawless, and I’m happy with the outcome."</p>
+                                        <p>"Great experience overall, though I would’ve appreciated a bit more detail
+                                            about the treatment options."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -135,7 +139,8 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Nadeen H.</h2>
-                                        <p>"I had a wonderful experience with Dr. Nagah! He performed my dental implant procedure. His staff was friendly, and the clinic had a calming atmosphere. Dr. Nagah took the time to answer all my questions too!"</p>
+                                        <p>"Fantastic care! The doctor explained every step clearly and made sure I felt
+                                            confident in the treatment plan."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/5-stars.png" alt="">
@@ -146,7 +151,8 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Youmna S.</h2>
-                                        <p>"Dr. Nagah’s surgical skills are top-notch! I had a minor maxillofacial procedure done, and the recovery was fast."</p>
+                                        <p>"Dr. Nagah’s surgical skills are top-notch! I had a minor maxillofacial
+                                            procedure done, and the recovery was fast."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
@@ -157,7 +163,8 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Cristiano R.</h2>
-                                        <p>"Dr. Youssef Nagah is an exceptional dentist! After years of avoiding surgery, I finally decided to get an implant. His calm demeanor and thorough explanations made the whole process much less intimidating. The surgery went smoothly, and the recovery was quicker than I expected."</p>
+                                        <p>"Professional and friendly staff. Everything went smoothly, but I had a few
+                                            unanswered questions about the procedure."</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/5-stars.png" alt="">
@@ -168,30 +175,33 @@
                                 <div class="comment-section">
                                     <div class="comment">
                                         <h2>Menna A.</h2>
-                                        <p>"Dr. Nagah is hands-down the best dental surgeon I've ever seen. I felt completely supported throughout the entire process. I’m also amazed at how well the recovery went. Highly recommend him!"</p>
+                                        <p>"Very thorough and attentive. I left feeling informed and well taken care
+                                            of—highly recommend!"</p>
                                     </div>
                                     <div class="stars">
                                         <img src="images/4-stars.png" alt="">
                                     </div>
                                 </div>
                             </div>
-                        <div class="comment-box">
-                            <div class="comment-section">
-                                <div class="comment">
-                                    <h2>Nick H.</h2>
-                                    <p>"The procedure itself was fine, but I was hoping for more detailed post-op instructions. Still, Dr. Nagah was very professional during the procedure."</p>
-                                </div>
-                                <div class="stars">
-                                    <img src="images/3-stars.png" alt="">
+                            <div class="comment-box">
+                                <div class="comment-section">
+                                    <div class="comment">
+                                        <h2>Nick H.</h2>
+                                        <p>"The procedure itself was fine, but I was hoping for more detailed post-op
+                                            instructions. Still, Dr. Nagah was very professional during the procedure."
+                                        </p>
+                                    </div>
+                                    <div class="stars">
+                                        <img src="images/3-stars.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     </section>
                     <!-- popup reservation form -->
                     <section>
-                        <div class="form-bg">
-                            <form action="" class="book-form">
+                        <div id="reservation-form" class="form-bg">
+                            <form id="book-form" action="" class="book-form">
                                 <div>
                                     <label for="patient-name" class="label">Patient Name: </label>
                                     <input type="text" required id="patient-name"
@@ -205,15 +215,15 @@
                                     <label for="book-date" class="date-label">Reservation Date</label>
                                     <input required type="date" id="book-date">
                                 </div>
-                                <button type="submit" class="book-confirm-btn">Book Now</button>
-                                <button class="cancel-btn">Cancel</button>
+                                <button id="confirm-book-btn" type="submit" class="book-confirm-btn">Book Now</button>
+                                <button id="cancel-btn" class="cancel-btn">Cancel</button>
                             </form>
                         </div>
                     </section>
                     <section>
-                        <div class="book-msg">
+                        <div id="confirmation-msg" class="book-msg">
                             <h3>Reservation Completed!</h3>
-                            <button>Close</button>
+                            <button id="close-msg-btn">Close</button>
                         </div>
                     </section>
                 </div>
