--- a/dental-section.html
+++ b/dental-section.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/category.css" />
     <link rel="stylesheet" href="css/search-bar.css" />
-    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -56,7 +61,10 @@
     </form>
 
     <!-- Main Title -->
-    <h1 class="main-title">Welcome to Dental Section🦷</h1>
+    <h1 class="main-title">
+      Welcome to Dental Section
+      <i class="fas fa-tooth" style="font-size: 50px"></i>
+    </h1>
 
     <p class="subtitle">
       Where professionalism meets exceptional dental care for a healthy smile
@@ -102,15 +110,19 @@
             <p class="slogan">Straight teeth, straight confidence.</p>
           </div>
         </div>
-  
+
         <div class="container">
           <div class="card">
             <div class="image-wrapper">
-              <img src="images/dent 33.jpg" alt="doctor1" class="doctor-image" />
+              <img
+                src="images/dent 33.jpg"
+                alt="doctor1"
+                class="doctor-image"
+              />
             </div>
             <div class="doctor-info">
               <a href="dentist-doc3.html"> Dr.Youssef Nagah</a>
-              <p class="description"> Performs surgical dental procedures.</p>
+              <p class="description">Performs surgical dental procedures.</p>
               <div class="rating">
                 <!--stars-->
                 <i class="fas fa-star"></i>
@@ -119,11 +131,12 @@
                 <i class="fas fa-star"></i>
                 <i class="far fa-star"></i>
               </div>
-              <p class="slogan">Dentist with 7+ years of experience.</p>
+              <p class="slogan">Surgical precision, compassionate care.</p>
             </div>
           </div>
-          </div>
-    
+        </div>
+      </div>
+    </div>
     <!-- Chat Bot Toggle Button -->
     <button class="chatbot-btn" onclick="toggleChatbox()">
       <i class="fa-solid fa-robot"></i>
