--- a/pediatrics-section.html
+++ b/pediatrics-section.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.1" />
-    <link rel="icon" href="images/healU-circle.png" type="image/x-icon">
+    <link rel="icon" href="images/healU-circle.png" type="image/x-icon" />
     <title>PEDIATRICS</title>
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/category.css" />
@@ -11,6 +11,10 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -56,9 +60,12 @@
     </form>
 
     <!-- Main Title -->
-    <h1 class="main-title">Welcome to Pediatrics Section</h1>
+    <h1 class="main-title">
+      Welcome to Pediatrics Section
+      <i class="fas fa-baby-carriage" style="font-size: 50px"></i>
+    </h1>
     <p class="subtitle">
-        From First Giggles to First Steps, We are Here to Care for Your Child.
+      From First Giggles to First Steps, We are Here to Care for Your Child.
     </p>
 
     <!-- Cards Section -->
@@ -69,7 +76,10 @@
         </div>
         <div class="doctor-info">
           <a href="#"> Dr.Azza Helal</a>
-          <p class="description">caring pediatrician combines expert knowledge with a compassionate approach to ensure your child health.</p>
+          <p class="description">
+            caring pediatrician combines expert knowledge with a compassionate
+            approach to ensure your child health.
+          </p>
           <div class="rating">
             <!--stars-->
             <i class="fas fa-star"></i>
@@ -89,7 +99,9 @@
           </div>
           <div class="doctor-info">
             <a href="#"> Dr.Khaled Hossam</a>
-            <p class="description">provides expert pediatric care with a gentle touch.</p>
+            <p class="description">
+              provides expert pediatric care with a gentle touch.
+            </p>
             <div class="rating">
               <!--stars-->
               <i class="fas fa-star"></i>
@@ -101,15 +113,22 @@
             <p class="slogan">Your Child Health, Our Passion.</p>
           </div>
         </div>
-  
+
         <div class="container">
           <div class="card">
             <div class="image-wrapper">
-              <img src="images/ped dr 3.jpg" alt="doctor1" class="doctor-image" />
+              <img
+                src="images/ped dr 3.jpg"
+                alt="doctor1"
+                class="doctor-image"
+              />
             </div>
             <div class="doctor-info">
               <a href="#"> Dr.Hany Essam</a>
-              <p class="description"> offers personalized care to support your child growth and well-being.</p>
+              <p class="description">
+                offers personalized care to support your child growth and
+                well-being.
+              </p>
               <div class="rating">
                 <!--stars-->
                 <i class="fas fa-star"></i>
@@ -121,8 +140,10 @@
               <p class="slogan">Growing Healthy Kids, One Visit at a Time.</p>
             </div>
           </div>
-          </div>
-    
+        </div>
+      </div>
+    </div>
+
     <!-- Chat Bot Toggle Button -->
     <button class="chatbot-btn" onclick="toggleChatbox()">
       <i class="fa-solid fa-robot"></i>
